--- a/style.css
+++ b/style.css
@@ -340,6 +340,10 @@ main {
     100% { background-position: -200%; }
 }
 @media (max-width: 999px) { /*スマホモード*/
+    html {
+        width: 100%;
+        height: 100%;
+    }
     .loginbox {
         height: 85vh;
         width: 95vw;
