--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ main {
     align-items: center;
 }
 
+#dropArea {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
 .circle {
     position: absolute;
     aspect-ratio: 1 / 1;
@@ -42,7 +48,6 @@ main {
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 0.6s ease, transform 1.2s ease;
-    z-index: 0;
 }
 .circle:hover {
     opacity: 1;
@@ -169,6 +174,7 @@ main {
     box-shadow: 0 0 3px rgb(238, 238, 238, .5) inset;
     border: solid 2px rgb(110, 106, 92);
     border-radius: 12px;
+    z-index: 100;
 }
 .upload_button img {
     margin-right: 2%;
@@ -188,6 +194,7 @@ main {
     box-shadow: 0 0 3px rgb(238, 238, 238, .5) inset;
     border: solid 2px rgb(110, 106, 92);
     border-radius: 12px;
+    z-index: 100;
 }
 .newUserBox_text {
     margin-left: .8vw;
