--- a/style.css
+++ b/style.css
@@ -1,20 +1,27 @@
 /*基本設定*/
-@import url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap');
 @import url('style_hamburger.css');
+@font-face {
+    font-family: 'Foglihtenno';
+    src: url(fonts/Foglihtenno04-aM2E.otf);
+}
+@font-face {
+    font-family: 'PLENTO-Regular';
+    src: url(fonts/PLENTO-Regular.ttf);
+}
+@font-face {
+    font-family: 'Bad Script', cursive;
+    src: url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
+}
+@font-face {
+    font-family: 'Grandiflora One', cursive;
+    src: url('https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap');
+}
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-.font-bad {
-    font-family: "Bad Script", cursive;
-}
-.font-grand {
-    font-family: "Grandiflora One", cursive;
-}
-a, p, img{
+a, p, img {
     user-select: none; /* 選択禁止 */
     -webkit-user-drag: none; /* Webkitブラウザ（ChromeやSafari）向け */
     -webkit-user-select: none;
@@ -23,6 +30,7 @@ a, p, img{
 body, html {
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
     background: rgb(187, 180, 156);
     touch-action: none;
     scrollbar-width: none;
@@ -54,13 +62,13 @@ main {
     mix-blend-mode: difference;
     opacity: 0;
     transform: translateY(20px);
-    transition: opacity 0.6s ease, transform 1.2s ease;
+    transition: opacity .6s ease, transform 1.2s ease;
     z-index: 0;
     overflow: hidden;
-}
-.circle:hover {
-    opacity: 1;
-    transform: translateY(0);
+    &:hover {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 #circle1 {
     top: 170px;
@@ -147,6 +155,13 @@ main {
     width: 150px;
     display: inline-block;
     z-index: 0;
+    span {
+        width: 100%;
+        height: 4px;
+        margin-bottom: 5px;
+        display: block;
+        background: rgb(224, 219, 201);
+    }
 }
 .line1 .block {
     position: relative;
@@ -154,13 +169,6 @@ main {
     width: 200px;
     transform-origin: center center 0;
     transform: rotate(110deg);
-}
-.line1 span {
-    width: 100%;
-    height: 4px;
-    margin-bottom: 5px;
-    display: block;
-    background: rgb(224, 219, 201);
 }
 .box1 {
     position: absolute;
@@ -188,34 +196,36 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-.container.active{
-    -ms-filter: blur(15px);
-    filter: blur(15px);
+    /* &.active{
+        -ms-filter: blur(15px);
+        filter: blur(15px);
+    } */
 }
 
 .gametitle {
     margin-top: 3vh;
-    font-size:8vh;
     color: aliceblue;
     text-shadow: 0px 0px 12px #ffffffaa;
-    letter-spacing: -1px;
-    font-weight: 500;
+    font-family: 'Foglihtenno';
+    font-size: 8vh;
     animation: rainbow1 .16s linear infinite;
 }
 .welcome {
-    font-size:4vh;
     color: aliceblue;
     text-shadow: 0px 0px 12px #ffffffaa;
-    font-weight: 400;
-    margin : -7vh 0 6vh;
+    font-family: 'Foglihtenno';
+    font-size:4vh;
+    margin : -2vh 0 6vh 0;
     animation: rainbow2 .16s linear infinite;
 }
-.kakapo img {
-    width: 0px;
+.kakapo {
     position: absolute;
-    top: 25%;
-    left: 47%;
+    top: 16%;
+    left: calc(50vw - 60px);
+    img {
+        aspect-ratio: 1 / 1;
+        width: 0px;
+    }
 }
 .prompt {
     height: 50%;
@@ -240,11 +250,6 @@ main {
     margin-right: 2%;
     height: 90%;
 }
-.upload_button_text {
-    margin-left: 2%;
-    font-size: 2vh;
-    color: black;
-}
 .newUserBox {
     width: 21vw;
     height: 30vh;
@@ -257,8 +262,9 @@ main {
     border-radius: 12px;
     z-index: 101;
 }
-.newUserBox_text {
-    margin-left: .8vw;
+.upload_button p, .newUserBox p {
+    font-family: 'Bad Script';
+    margin-left: .7vw;
     font-size: 2vh;
     color: black;
 }
@@ -282,11 +288,12 @@ main {
     border-radius: 6px;
     position: relative;
     left: 70%;
-}
-.done_button_text {
-    font-size: 2vh;
-    margin: 0;
-    color: black;
+    p {
+        font-family: 'Bad Script';
+        font-size: 2vh;
+        margin: 0;
+        color: black;
+    }
 }
 .upload_button:focus, #newName:focus, .done_button:focus {
     outline: 0;
@@ -362,7 +369,7 @@ main {
             background-size: 1.7vh 1.7vh;
         }
         .line1 {
-            bottom: 5％;
+            bottom: 5%;
         }
         .welcome {
             margin-bottom: 5vh;
@@ -373,7 +380,7 @@ main {
         #newName {
             margin-left: 10%;
         }
-        .newUserBox_text, .upload_button_text, #newName, .done_button_text {
+        .newUserBox p, .upload_button p, #newName, .done_button p {
             font-size: 1.2vh;
         }
         .done_button {
@@ -396,7 +403,7 @@ main {
         .upload_button img {
             height: 60%;
         }
-        .upload_button_text {
+        .upload_button p {
             font-size: 4vh;
         }
     }
@@ -418,7 +425,7 @@ main {
             .upload_button {
                 width: 65%;
             }
-            .upload_button_text {
+            .upload_button p {
                 font-size: 2vh;
             }
         }
@@ -436,4 +443,3 @@ main {
         }
     }
 }
-
