--- a/style.css
+++ b/style.css
@@ -22,10 +22,12 @@
     box-sizing: border-box;
 }
 a, p, img {
+    pointer-events: none; /* 画像保存禁止 */
     user-select: none; /* 選択禁止 */
     -webkit-user-drag: none; /* Webkitブラウザ（ChromeやSafari）向け */
     -webkit-user-select: none;
     -moz-user-select: none; /* Firefox向け */
+    -ms-user-select: none;     /* Internet Explorer */
     font-size: 1.8vh;
 }
 body, html {
