--- a/style_hamburger.css
+++ b/style_hamburger.css
@@ -79,17 +79,17 @@ a {
 }
 .hamburger_button.active span:nth-child(1){
     transition: ease-out .8s;
-    top: 23px;
+    top: 24px;
     transform: rotate(25deg);
 }
 .hamburger_button.active span:nth-child(2){
-    transition: ease-out .8s;
-    opacity: 0.8;
-    transform: translate(200px, 25px) scaleX(3.5) rotate(180deg); /*translate(x座標, y座標) scaleX(倍) rotate(回転角度)*/
+    transition: ease-out .4s;
+    opacity: 0;
+    transform: translate(80px, 0); /*translate(x座標, y座標) */
 }
 .hamburger_button.active span:nth-child(3){
     transition: ease-out .8s;
-    top: -23px;
+    top: -24px;
     transform: rotate(-25deg);
 }
 
@@ -109,18 +109,31 @@ a {
 }
 /*メニューの中身*/
 .hamburger_items {
+    width: 30%;
+    height: 70%;
     opacity: 0;
     position: absolute;
     top: 70px;
-    left: 160px;
+    left: 20px;
     margin: auto;
-    z-index: 1;
+    z-index: 1000;
     transition: opacity 0.6s ease;
     pointer-events: none;
-
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    border-radius: 20px;
+    border: 1px solid rgba(250, 250, 250, 0.1);
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.15);
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
     /*リストを表示*/
     &.active {
         opacity: 1;
         pointer-events: auto;
+    }
+    a {
+        z-index: 1001;
     }
 }
