--- a/style.css
+++ b/style.css
@@ -21,22 +21,26 @@
     padding: 0;
     box-sizing: border-box;
 }
-a, p, img {
+img {
     pointer-events: none; /* 画像保存禁止 */
-    user-select: none; /* 選択禁止 */
-    -webkit-user-drag: none; /* Webkitブラウザ（ChromeやSafari）向け */
-    -webkit-user-select: none;
-    -moz-user-select: none; /* Firefox向け */
-    -ms-user-select: none;     /* Internet Explorer */
-    font-size: 1.8vh;
 }
 body, html {
     height: 100vh;
     width: 100vw;
     overflow: hidden;
     background: rgb(187, 180, 156);
+}
+body, html, a, p {
+    user-select: none; /* 選択禁止 */
+    -webkit-user-select: none;
+    -moz-user-select: none; /* Firefox向け */
+    -ms-user-select: none;     /* Internet Explorer */
+    -webkit-user-drag: none; /* Webkitブラウザ（ChromeやSafari）向け */
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
     touch-action: none;
     scrollbar-width: none;
+    font-size: 1.8vh;
 }
 
 
