--- a/style_hamburger.css
+++ b/style_hamburger.css
@@ -19,20 +19,20 @@ a {
     /*マウスが乗った時*/
     &:hover {
         .TextMask .text {
-            animation: visible .4s ease-out forwards;
+            animation: visible .4s ease forwards;
         }
     }
     
     /*マウスが離れた時*/
     &:not(:hover) {
         .TextMask .text {
-            animation: invisible .4s ease-out forwards;
+            animation: invisible .4s ease forwards;
         }
     }
     
     /*メニューを押したとき*/
     &.active .text {
-        transition: ease-out .8s;
+        transition: ease .8s;
         transform: translateX(-80px);
     }
 }
@@ -58,7 +58,7 @@ a {
     height: 2px;
     border-radius: 2px;
     position: relative;
-    transition: ease-out .8s;
+    transition: ease .8s;
     display: block;
     background-color: rgb(110, 106, 92);
 }
@@ -78,17 +78,17 @@ a {
     transform: translateX(0) ;
 }
 .hamburger_button.active span:nth-child(1){
-    transition: ease-out .8s;
+    transition: ease .8s;
     top: 24px;
     transform: rotate(25deg);
 }
 .hamburger_button.active span:nth-child(2){
-    transition: ease-out .4s;
+    transition: ease .4s;
     opacity: 0;
     transform: translate(80px, 0); /*translate(x座標, y座標) */
 }
 .hamburger_button.active span:nth-child(3){
-    transition: ease-out .8s;
+    transition: ease .8s;
     top: -24px;
     transform: rotate(-25deg);
 }
@@ -104,7 +104,7 @@ a {
         color: aliceblue;
         text-shadow: 0px 0px 6px #cee1f3, 0px 0px 10px #9fc5e8;
         position: relative;
-        transition: ease-out .8s;
+        transition: ease .8s;
     }
 }
 /*メニューの中身*/
@@ -121,7 +121,6 @@ a {
     pointer-events: none;
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
     border-radius: 20px;
     border: 1px solid rgba(250, 250, 250, 0.1);
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.15);
@@ -132,8 +131,5 @@ a {
     &.active {
         opacity: 1;
         pointer-events: auto;
-    }
-    a {
-        z-index: 1001;
     }
 }
