--- a/gamepage/style.css
+++ b/gamepage/style.css
@@ -1,54 +1,136 @@
 /*基本設定*/
-@import url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap');
 @import url('../style_hamburger.css');
-.font-bad {
-    font-family: "Bad Script", cursive;
+@font-face {
+    font-family: 'Foglihtenno';
+    src: url(../fonts/Foglihtenno04-aM2E.otf);
 }
-.font-grand {
-    font-family: "Grandiflora One", cursive;
+@font-face {
+    font-family: 'PLENTO-Regular';
+    src: url(../fonts/PLENTO-Regular.ttf);
 }
-a, p, img{
-    user-select: none; /* 選択禁止 */
-    -webkit-user-drag: none; /* Webkitブラウザ（ChromeやSafari）向け */
-    -webkit-user-select: none;
-    -moz-user-select: none; /* Firefox向け */
+@font-face {
+    font-family: 'Bad Script', cursive;
+    src: url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
+}
+@font-face {
+    font-family: 'Grandiflora One', cursive;
+    src: url('https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap');
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+img {
+    pointer-events: none; /* 画像保存禁止 */
 }
 body, html {
-    background: rgb(168, 161, 137);
+    height: 100vh;
+    width: 100vw;
+    background: rgb(187, 180, 156);
+}
+body, html, a, p {
+    user-select: none; /* 選択禁止 */
+    -webkit-user-select: none;
+    -moz-user-select: none; /* Firefox向け */
+    -ms-user-select: none;     /* Internet Explorer */
+    -webkit-user-drag: none; /* Webkitブラウザ（ChromeやSafari）向け */
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
     touch-action: manipulation;
     scrollbar-width: none;
-    width: 100%;
+    font-size: 1.8vh;
 }
-
 
 /*--------------------------------------------------*/
 
-
-.content {
+main {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
+
+.container{
+    flex-wrap: wrap;
+    /* &.active{
+        -ms-filter: blur(15px);
+        filter: blur(15px);
+    } */
+}
+#levels {
+    ul {
+        width: 28vw;
+        margin: 0 1vw;
+    }
+    li {
+        border-bottom: solid 1px rgb(0, 0, 0);
+    }
+    p {
+        margin: 10px 0 5px 10px;
+        font-size: 3.5vh;
+    }
+    li p {
+        margin: 0 0 5px 30px;
+        font-size: 2.7vh;
+    }
+}
+#st1-1:hover {
+
+}
+#st1-2:hover {
+
+}
+#st1-3:hover {
+
+}
+#st2-1:hover {
+
+}
+#st2-2:hover {
+
+}
+#st2-3:hover {
+
+}
+#st3-1:hover {
+
+}
+#st3-2:hover {
+
+}
+#st3-3:hover {
+
+}
+
 .stage {
     position: relative;
     aspect-ratio: 3 / 4;
-    width: 500px;
-    margin: 50px;
+    width: 28vw;
     background: rgb(100, 100, 100);
     display: flex;
     justify-content: center;
     align-items: flex-start;
-}
-.stage a {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
+    a {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+    }
 }
 .thumbnail {
     aspect-ratio: 4 /3;
-    width: 400px;
-    margin-top: 40px;
+    width: 24vw;
+    margin-top: 5vh;
     background: rgb(168, 161, 137);
+}
+@media (max-width: 999px) { /*スマホモード*/
+    .hamburger_button {
+        margin-top: 10%;
+    }
+    @media (orientation: portrait) {    /*縦向き用（portrait: 肖像画）*/
+        .thumbnail {
+            margin-top: 1vh;
+        }
+    }
 }
