--- a/style_hamburger.css
+++ b/style_hamburger.css
@@ -161,6 +161,7 @@ a {
         width: 90%;
         top: 90px;
         left: 5%;
+        backdrop-filter: blur(5px);
     }
     @media (orientation: portrait) {    /*縦向き用（portrait: 肖像画）*/
     }
