style_hamburger.css を更新

--- a/style_hamburger.css
+++ b/style_hamburger.css
@@ -9,9 +9,9 @@ li {
 a {
     text-decoration: none;
 }
-* {
+/** {
     border: solid 1px rgb(200, 30, 30, .2);
-}
+}*/
 @font-face {
     font-family: 'Receipt';
     src: url(fonts/レシートフォント.ttf);
