--- a/gamepage/stages/1/style.css
+++ b/gamepage/stages/1/style.css
@@ -18,10 +18,38 @@ body, html {
     background: rgb(168, 161, 137);
     touch-action: manipulation;
     scrollbar-width: none;
-    width: 100%;
+    --htmlWidth: 100%;
+    --htmlHeight: 100%;
+    width: var(--htmlWidth);
+    height: var(--htmlHeight);
+    overflow: hidden;
 }
 
 
 /*--------------------------------------------------*/
 
-
+#tile {
+    width: 100%;
+    height: 100%;
+    background: white;
+    position: absolute;
+    top: 95vh;
+    #moveTile {
+        --tileWidth: 50%;
+        --volume: 0%;
+        width: var(--tileWidth);
+        height: 3vh;
+        background: white;
+        position: relative;
+        bottom: calc(var(--volume) + 10%);
+        left: calc((100% - var(--tileWidth)) / 2);
+        transition: ease .5s;
+        text-align: center;
+        &::before {
+            content: "音量 -- ";
+        }
+        &::after {
+            content: "% --";
+        }
+    }
+}
