--- a/style_pageback.css
+++ b/style_pageback.css
@@ -1,21 +1,5 @@
-a:link { color: rgb(30, 28, 21); }                                            /*リンクのデフォルト色*/
-a:visited { color: rgb(30, 28, 21); }                                         /*閲覧済みリンク色*/
-a:hover { color: rgb(157, 152, 135); }                                           /*リンクを持っているときの色*/
-a:active { color: rgb(157, 152, 135); }                                          /*リンクを選択中(リンクにカーソルが重なってる時)の色*/
-li {
-    list-style: none;
-    margin: 15px 0 15px 0;
-}
-a {
-    text-decoration: none;
-}
-/** {
-    border: solid 1px rgb(200, 30, 30, .2);
-}*/
-@font-face {
-    font-family: 'Receipt';
-    src: url(fonts/レシートフォント.ttf);
-}
+@import url(root.css);
+
 
 .pageback_button{
     width: 80px;
