--- a/gamepage/style.css
+++ b/gamepage/style.css
@@ -1,48 +1,4 @@
-/*基本設定*/
-@import url('../style_hamburger.css');
-@font-face {
-    font-family: 'Foglihtenno';
-    src: url(../fonts/Foglihtenno04-aM2E.otf);
-}
-@font-face {
-    font-family: 'PLENTO-Regular';
-    src: url(../fonts/PLENTO-Regular.ttf);
-}
-@font-face {
-    font-family: 'Bad Script', cursive;
-    src: url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
-}
-@font-face {
-    font-family: 'Grandiflora One', cursive;
-    src: url('https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap');
-}
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-img {
-    pointer-events: none; /* 画像保存禁止 */
-}
-body, html {
-    height: 100vh;
-    width: 100vw;
-    background: rgb(187, 180, 156);
-}
-body, html, a, p {
-    user-select: none; /* 選択禁止 */
-    -webkit-user-select: none;
-    -moz-user-select: none; /* Firefox向け */
-    -ms-user-select: none;     /* Internet Explorer */
-    -webkit-user-drag: none; /* Webkitブラウザ（ChromeやSafari）向け */
-    -webkit-user-drag: none;
-    -khtml-user-drag: none;
-    touch-action: manipulation;
-    scrollbar-width: none;
-    font-size: 1.8vh;
-}
-
-/*--------------------------------------------------*/
+@import url(../root.css);
 :root {
     /* --stage_1_height: 0;
     --stage_2_height: 0;
@@ -67,6 +23,7 @@ main {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    font-family: 'Receipt';
 }
 
 .container{
@@ -74,11 +31,19 @@ main {
     /* &.active{
         -ms-filter: blur(15px);
         filter: blur(15px);
-        } */
-    }
-    .levels {
+    } */
+}
+.levels {
     display: flex;
     justify-content: space-around;
+    width: calc(100% / 3);
+    height: 100vh;
+    &#lev2 {
+        background: linear-gradient(rgb(0, 0, 0, 0), rgb(0, 0, 0, 0.08)15%, rgb(0, 0, 0, .2)50%);
+    }
+    &#lev3 {
+        background: linear-gradient(rgb(0, 0, 0, 0), rgb(0, 0, 0, 0.18)15%, rgb(0, 0, 0, .3)50%);
+    }
     ul {
         width: 27vw;
         margin: 0 1vw;
@@ -88,19 +53,62 @@ main {
     p {
         margin: 10px 0 5px 0;
         font-size: 3.5vh;
+        color: rgb(30, 28, 21);
     }
     li {
+        overflow: hidden;
+        display: flex;
+        justify-content: center; /* 横方向の中央揃え */
+        align-items: center; /* 縦方向の中央揃え */
         border-bottom: solid 1px rgb(0, 0, 0);
+        .temp {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     }
-    li p {
-        margin: 0 0 5px 30px;
-        font-size: 2.7vh;
-    }
+}
+.stNumber {
+    width: max-content;
+    padding: 3% 10%;
+    font-size: 2.7vh;
+    mix-blend-mode: difference;
+    color: rgb(157, 152, 135);
 }
 
-.levels li:hover {
-    background: rgb(50, 210, 255, .5);
+
+.my-contact-btn {
+    position: relative;
 }
+/*ボタン内のテキストを疑似要素の上にもってくる*/
+.my-contact-btn .tmep {
+    position: relative; /* ←ポイント */
+    z-index: 2;    /* ←ポイント */
+    transition: .3s; /* ←ポイント */
+}
+.my-contact-btn:hover .temp{
+    color: gray;
+}
+/*ボタン上のアニメーションの設定*/
+.my-btn-animation:before {
+    content: '';
+    position: absolute;
+    top: 70%;
+    left: 0;
+    z-index: 1;
+    background: rgba(135, 135, 157, 0.2);
+    width: 100%;
+    height: 25%;
+    transform: scale(0, 1);           /* ←ポイント */
+    transition: transform .3s ease;   /* ←ポイント */
+    transform-origin: left;           /* ←ポイント */
+}
+.my-btn-animation:hover:before{
+    transform: scale(1, 1);    /* ←ポイント */
+    transform-origin: left;  /* ←ポイント */
+}
+
+
 .stage {
     height: 0;
     position: relative;
@@ -108,6 +116,9 @@ main {
     transition: ease .3s;
     display: flex;
     opacity: 0;
+    p {
+        color: aliceblue;
+    }
     a {
         position: absolute;
         top: 0;
@@ -125,4 +136,9 @@ main {
     aspect-ratio: 4 /2;
     height: 5vh;
     background: rgb(168, 161, 137);
+}
+@media (max-width: 999px) { /*スマホモード*/
+    .stNumber {
+        font-size: 2vh;
+    }
 }
